Fix broken nav hiding on mobile.

--- a/modules/site/src/main/resources/microsite/css/gcn-nav.scss
+++ b/modules/site/src/main/resources/microsite/css/gcn-nav.scss
@@ -48,7 +48,7 @@ ul.horizontalNav {
 }
 
 @media (max-width: 768px) {
-  #site-header > div.affix.mobile-nav-hide {
+  #nav-container.affix.mobile-nav-hide {
     transform: translateY(-52px);
     transition-duration: 0.2s;
   }
